resloved setting card layout issue

--- a/src/layouts/topNav/topNav.scss
+++ b/src/layouts/topNav/topNav.scss
@@ -151,7 +151,7 @@
     @include flex(center, space-around, column); 
     position: absolute;
     z-index: 1;
-    left: 105rem;
+    right: 12%;
     top: 5rem;
     p{
         width: 100%;
